[tool.poetry]
name = "gcat"
version = "0.1.0"
description = "A grid convergence analysis toolkit (GCAT) in Python."
authors = ["Gabriel B. Santos <gabriel.bertacco@unesp.br>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gabrielbdsantos/gcat"
keywords = ["mesh independence", "grid convergence analysis", "GCI"]

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pydocstyle]
convention = "numpy"
