[project]
name = "gcat"
version = "1.2.1"
description = "A grid convergence analysis toolkit (GCAT) in Python."
authors = [
    { name = "Gabriel B. Santos", email = "gabriel.bertacco@unesp.br" }
]
dependencies = [
    "typer>=0.7.0",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.8"
packages = [
  { include = "gcat" },
]

[project.scripts]
gcat = 'gcat.cli:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = false
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gcat"]

[tool.ruff]
line-length = 79

[tool.pydocstyle]
convention = "numpy"
