[project]
name = "gcat"
version = "1.2.1"
description = "A grid convergence analysis toolkit (GCAT) in Python."
authors = [
    { name = "Gabriel B. Santos", email = "gabriel.bertacco@unesp.br" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "typer>=0.15.1",
]
requires-python = ">= 3.8"
packages = [
    { include = "gcat" },
]

[project.scripts]
gcat = "gcat.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
